--- a/main.yml
+++ b/main.yml
@@ -4,5 +4,23 @@
   connection: local
   gather_facts: yes
   become: yes
-  roles:
-    - mssql-linux
+  tasks:
+          #  - name: Run remove tasks from mssql-server #role
+          #    include_role:
+          #      name: mssql-ubuntu
+          #      tasks_from: main
+  - name: Run remove tasks from mssql-server role
+    include_role:
+      name: mssql-ubuntu
+      tasks_from: new_db
+
+  - name: Run remove tasks from mssql-server role
+    include_role:
+      name: mssql-ubuntu
+      tasks_from: import_db
+
+  - name: Run remove tasks from mssql-server role
+    include_role:
+      name: mssql-ubuntu
+      tasks_from: delete_db
+
