--- a/roles/mssql-ubuntu/tasks/import_db.yml
+++ b/roles/mssql-ubuntu/tasks/import_db.yml
@@ -1,14 +1,14 @@
 ---
 - name: Place SQL file on system for import
   copy:
-    src: "{{ import_file }}"
-    dest: "{{ import_file_dest }}"
+    src: "{{ filename_to_copy }}"
+    dest: "{{ filename_to_execute }}"
 
 - name: Import SQL File
   mssql_db:
     name: "{{ db_name }}"
     state: import
-    target: "{{ import_file_dest }}"
+    target: "{{ filename_to_execute }}"
     login_host: "{{db_host}}"
     login_port: "{{db_port}}"
     login_user: "{{ db_user }}"
