--- a/main.yml
+++ b/main.yml
@@ -5,10 +5,11 @@
   gather_facts: yes
   become: yes
   tasks:
-          #  - name: Run remove tasks from mssql-server #role
-          #    include_role:
-          #      name: mssql-ubuntu
-          #      tasks_from: main
+  - name: Run remove tasks from mssql-server #role
+    include_role:
+      name: mssql-ubuntu
+      tasks_from: main
+
   - name: Run remove tasks from mssql-server role
     include_role:
       name: mssql-ubuntu
