--- a/roles/mssql-ubuntu/tasks/main.yml
+++ b/roles/mssql-ubuntu/tasks/main.yml
@@ -10,22 +10,29 @@
 
 - name: Download the Microsoft SQL Server signing key
   shell: curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -
+  when: ansible_distribution == 'Ubuntu'
 
-- name: Microsoft SQL Repository
+- name: Import the MSFT gpg key
+  rpm_key:
+    state: present
+    key: https://packages.microsoft.com/keys/microsoft.asc
+  when: ansible_distribution in ['CentOS', 'RedHat']
+
+- name: Microsoft SQL Repository for ['Centos','Redhat']
   command: curl -o /etc/yum.repos.d/mssql-server.repo https://packages.microsoft.com/config/rhel/8/mssql-server-2022.repo
   when: ansible_distribution in ['CentOS', 'RedHat']
   
-- name: install mssql-server repo (Ubuntu)
+- name: Microsoft SQL Repository for Ubuntu
   get_url:
     url: "{{ mssql_repo_url_ubuntu }}"
     dest: /etc/apt/sources.list.d/mssql-server.list
   when: ansible_distribution == 'Ubuntu'
 
-- name: refresh apt-get cache for server repo (Ubuntu)
+- name: Refresh apt-get cache for server repo (Ubuntu)
   command: apt-get update
   when: ansible_distribution == 'Ubuntu'
 
-- name: Update package cache
+- name: Update package cache for ['Centos','Redhat']
   yum:
     update_cache: yes
   when: ansible_distribution in ['CentOS', 'RedHat']
@@ -36,7 +43,7 @@
     state: present
   when: ansible_distribution in ['CentOS', 'RedHat']
   
-- name: Install SQL Server on ['Ubuntu', 'Ubuntu']
+- name: Install SQL Server on Ubuntu
   apt:
     name: mssql-server
     state: present
@@ -67,12 +74,12 @@
     url: "{{ mssql_tool_url_ubuntu }}"
     dest: /etc/apt/sources.list.d/mssql-tools.list
   when: ansible_distribution == 'Ubuntu'
-  when: install_cli
 
 - name: Microsoft SQL-CLI-TOOLS Repository
   become: yes
   command: sudo curl -o /etc/yum.repos.d/msprod.repo https://packages.microsoft.com/config/rhel/8/prod.repo
   when: ansible_distribution in ['CentOS', 'RedHat']
+  when: install_cli
   
 - name: Refresh apt-get cache for tools repo (Ubuntu)
   command: apt-get update
@@ -84,6 +91,7 @@
     state: absent
   with_items: "{{ unixODBC_packages }}"
   when: ansible_distribution in ['CentOS', 'RedHat']
+  when: install_cli
   
 - name: Update all packages
   yum:
@@ -91,18 +99,31 @@
     state: latest
   when: ansible_distribution in ['CentOS', 'RedHat']
   
-- name: install mssql-tools package
+- name: Install mssql-tools package
   package:
-    name: "{{ mssql_tool_packages }}"
+    name: mssql-tools
     state: latest
   environment:
     ACCEPT_EULA: 'y'
   when: install_cli
 
-- name: Add mssql tools to .bashrc
+- name: Add mssql tools to .bashrc on ['CentOS', 'RedHat']
+  lineinfile:
+    path: /home/ec2-user/.bashrc
+    state: present
+    line: 'export PATH="$PATH:/opt/mssql-tools/bin"'
+  when: install_cli
+  when: ansible_distribution in ['CentOS', 'RedHat']
+
+- name: Add mssql tools to .bashrc on Ubuntu
   lineinfile:
     path: /home/ubuntu/.bashrc
     state: present
     line: 'export PATH="$PATH:/opt/mssql-tools/bin"'
   when: install_cli
+  when: ansible_distribution == 'Ubuntu'
 
+
+- name: refresh apt-get cache for server repo (Ubuntu)
+  shell: source /home/ec2-user/.bashrc
+  when: ansible_distribution in ['CentOS', 'RedHat']
