--- a/main.yml
+++ b/main.yml
@@ -7,7 +7,7 @@
   tasks:
   - name: Run main task to install mssql-server
     include_role:
-      name: mssql-ubuntu
+      name: mssql-linux
       tasks_from: main
  
   - name: Wait up to 60 seconds for server to become available after creation
@@ -17,16 +17,15 @@
 
 #  - name: Run new_db tasks to create database inside mssql-server
 #    include_role:
-#      name: mssql-ubuntu
+#      name: mssql-linux
 #      tasks_from: new_db
 
 #  - name: Run import_db tasks to execute script inside mssql-server database
 #    include_role:
-#      name: mssql-ubuntu
+#      name: mssql-linux
 #      tasks_from: import_db
 
-  - name: Run delete_db tasks to delete database inside mssql-server 
-    include_role:
-      name: mssql-ubuntu
-      tasks_from: delete_db
-
+#  - name: Run delete_db tasks to delete database inside mssql-server 
+#    include_role:
+#      name: mssql-linux
+#      tasks_from: delete_db
