--- a/roles/mssql-linux/handlers/main.yml
+++ b/roles/mssql-linux/handlers/main.yml
@@ -4,5 +4,8 @@
     name: firewalld
     state: reloaded
 
-- name: update env
+- name: update env redhat
+  shell: source /home/ec2-user/.bashrc
+
+- name: update env ubuntu
   shell: source /home/ec2-user/.bashrc
