--- a/roles/mssql-linux/tasks/main.yml
+++ b/roles/mssql-linux/tasks/main.yml
@@ -21,44 +21,52 @@
 - name: Microsoft SQL Repository for ['Centos','Redhat']
   command: curl -o /etc/yum.repos.d/mssql-server.repo https://packages.microsoft.com/config/rhel/8/mssql-server-2022.repo
   when: ansible_distribution in ['CentOS', 'RedHat']
+  become: yes
   
 - name: Microsoft SQL Repository for Ubuntu
   get_url:
     url: "{{ mssql_repo_url_ubuntu }}"
     dest: /etc/apt/sources.list.d/mssql-server.list
   when: ansible_distribution == 'Ubuntu'
-
+  become: yes
+  
 - name: Refresh apt-get cache for server repo (Ubuntu)
   command: apt-get update
   when: ansible_distribution == 'Ubuntu'
-
+  become: yes
+  
 - name: Update package cache for ['Centos','Redhat']
   yum:
     update_cache: yes
   when: ansible_distribution in ['CentOS', 'RedHat']
+  become: yes
   
 - name: Install Microsoft SQL Server on ['Centos', 'Redhat']
   yum:
     name: "{{ mssql_packages }}"
     state: present
   when: ansible_distribution in ['CentOS', 'RedHat']
+  become: yes
   
 - name: Install SQL Server on Ubuntu
   apt:
     name: mssql-server
     state: present
   when: ansible_distribution == 'Ubuntu'
-
+  become: yes
+  
 - name: Install pymssql for future playbooks against DB server
   pip:
     name: pymssql
     state: present
-
+  become: yes
+  
 - name: Stop SQL Server
   service:
     name: mssql-server
     state: stopped
-
+  become: yes
+  
 - name: Configure Microsoft SQL Server
   shell:  MSSQL_PID="{{edition}}" MSSQL_SA_PASSWORD="{{db_password}}" /opt/mssql/bin/mssql-conf -n setup accept-eula
   become: yes
@@ -68,13 +76,15 @@
     name: mssql-server 
     state: started 
     enabled: yes
-
+  become: yes
+  
 - name: Install mssql-tools repo (Ubuntu)
   get_url:
     url: "{{ mssql_tool_url_ubuntu }}"
     dest: /etc/apt/sources.list.d/mssql-tools.list
   when: ansible_distribution == 'Ubuntu'
-
+  become: yes
+  
 - name: Microsoft SQL-CLI-TOOLS Repository
   become: yes
   command: sudo curl -o /etc/yum.repos.d/msprod.repo https://packages.microsoft.com/config/rhel/8/prod.repo
@@ -84,7 +94,8 @@
 - name: Refresh apt-get cache for tools repo (Ubuntu)
   command: apt-get update
   when: ansible_distribution == 'Ubuntu'
-
+  become: yes
+  
 - name: Remove older unixODBC files if performing upgrade
   yum:
     name: "{{ item }}"
@@ -92,12 +103,14 @@
   with_items: "{{ unixODBC_packages }}"
   when: ansible_distribution in ['CentOS', 'RedHat']
   when: install_cli
+  become: yes
   
 - name: Update all packages
   yum:
     name: '*'
     state: latest
   when: ansible_distribution in ['CentOS', 'RedHat']
+  become: yes
   
 - name: Install mssql-tools package
   package:
@@ -106,7 +119,8 @@
   environment:
     ACCEPT_EULA: 'y'
   when: install_cli
-
+  become: yes
+  
 - name: Add mssql tools to .bashrc on ['CentOS', 'RedHat']
   lineinfile:
     path: /home/ec2-user/.bashrc
@@ -115,7 +129,7 @@
   when: install_cli
   when: ansible_distribution in ['CentOS', 'RedHat']
   notify: update env redhat
-
+  
 - name: Add mssql tools to .bashrc on Ubuntu
   lineinfile:
     path: /home/ubuntu/.bashrc
@@ -125,15 +139,5 @@
   when: ansible_distribution == 'Ubuntu'
   notify: update env ubuntu
 
-- name: Update all packages
-  yum:
-    name: '*'
-    state: latest
-  when: ansible_distribution in ['CentOS', 'RedHat']
-
 - name: Install required ansible collection
   shell: ansible-galaxy collection install community.general
-  
-- name: Refresh apt-get cache for tools repo (Ubuntu)
-  command: apt-get update
-  when: ansible_distribution == 'Ubuntu'  
